unpackaged/main/default/objects/FPC_AMI_Status__c/FPC_AMI_Status__c.object-meta.xml
<CustomObject>
    <description>Status messages sent back from AMI web service</description>
    <label>AMI Status</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>AMI Status ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMI Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>