unpackaged/main/default/objects/FPC_AMI_Status__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AMI Status (Opportunity Name)</relationshipLabel>
    <relationshipName>AMI_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>