unpackaged/main/default/objects/FPC_AMI_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Along with the create date field, this field indicates when we received status back from AMI</description>
    <inlineHelpText>Along with the create date field, this field indicates when we received status back from AMI</inlineHelpText>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>